add build option for linux/gtk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ if (WIN32)
 elseif (APPLE)
   set(SOURCE_FILES ${SOURCE_FILES} src/nfd_cocoa.m)
   set_source_files_properties(${SOURCE_FILES} PROPERTIES COMPILE_FLAGS "-x objective-c")
+elseif (UNIX)
+  set(SOURCE_FILES ${SOURCE_FILES} src/nfd_gtk.c)
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+  include_directories(${GTK3_INCLUDE_DIRS})
 endif()
 
 include_directories(src/include)
